[gd_scene load_steps=10 format=2]

[ext_resource path="res://hg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/resources/black_btn.tres" type="StyleBox" id=2]
[ext_resource path="res://Menus/resources/bg.jpg" type="Texture" id=3]
[ext_resource path="res://Menus/MainMenu/NewGame.gd" type="Script" id=4]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=5]
[ext_resource path="res://Menus/resources/red_btn.tres" type="StyleBox" id=6]
[ext_resource path="res://font_s28.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
shadow_size = 6

[sub_resource type="DynamicFont" id=2]
size = 36
use_filter = true
font_data = ExtResource( 1 )

[node name="NewGame" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.295
anchor_top = 0.222
anchor_right = 0.705
anchor_bottom = 0.778
margin_left = 0.399963
margin_top = 0.159988
margin_right = -0.400024
margin_bottom = -0.160034
rect_pivot_offset = Vector2( 265.194, 202.474 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.207
anchor_top = 0.211
anchor_right = 0.793
anchor_bottom = 0.404
margin_left = 0.0319901
margin_top = 0.121002
margin_right = -0.0320129
margin_bottom = -0.0792084
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Panel"]
anchor_left = 0.207
anchor_top = 0.585
anchor_right = 0.793
anchor_bottom = 0.777
margin_left = 0.0319901
margin_top = -0.0186005
margin_right = -0.0320129
margin_bottom = 0.181396
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
anchor_left = 0.044
anchor_top = 0.864
anchor_right = 0.149
anchor_bottom = 0.943
margin_left = 0.335598
margin_top = -0.217041
margin_right = -0.0643921
margin_bottom = -0.0970459
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 7 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 5 )
is_real = true
max_ad_content_rate = "T"
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
